--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta charset="utg-8">
 </head>
 <body>
-<h1><a href="1.html">아이유</a></h1>
-<img src="https://ww.namu.la/s/aeca2e14dbb78281beabffe6d5a8b1a84233da4aa2d7b857f11baa8530908b4faf2dae5ce55389c73821b2235cfa3c4d9744bb30d3edc6efda4a446164481c78d58280f500550e9d750d9af9de7df1b4f32662545dbf719e3e29f104fbdd7ec0cd07d6e290b79928d382fcfdc655e464" width="300">
+<h1>a href="1.html">아이유</a></h1>
+<img src="iu.png" width="300">
 <p>본명:이지은 (李知恩, Lee Ji-eun)</p>
 <p>출생:1993년 5월 16일 (27세),서울특별시 광진구</p>
 <p>국적:대한민국</p>
